syntax = "proto3";

option  go_package = "../protobuf";
option java_multiple_files = true;
option java_package = "io.grpc.examples.protobuf";
option java_outer_classname = "ProtobufProto";


package protobuf;

// 定义 WebRTC 服务.
service WebRTC {
    // 查询用户是否在线
    rpc QueryUsersOnline (QueryUsersOnlineReq) returns (QueryUsersOnlineRsp) {
    }
    // 发送消息
    rpc SendMsg (SendMsgReq) returns (SendMsgRsp) {
    }
    // 给这台机器的房间内所有用户发送消息
    rpc SendMsgAll (SendMsgAllReq) returns (SendMsgAllRsp) {
    }
    // 获取用户列表
    rpc GetUserList (GetUserListReq) returns (GetUserListRsp) {
    }
}

// 查询用户是否在线
message QueryUsersOnlineReq {
    uint64 roomId = 1; // RoomId
    uint64 userId = 2; // 用户ID
}

message QueryUsersOnlineRsp {
    uint64 retCode = 1;
    string errMsg = 2;
    bool online = 3;
}

// 发送消息
message SendMsgReq {
    string seq = 1; // 序列号
    uint64 roomId = 2; // 房间ID
    uint64 userId = 3; // 用户ID
    string cmd = 4; // cmd 动作: msg/enter/exit
    string type = 5; // type 消息类型，默认是 text
    string msg = 6; // msg
    bool isLocal = 7; // 是否查询本机 内部调用为:true(本机查询不到即结束)
}

message SendMsgRsp {
    uint64 retCode = 1;
    string errMsg = 2;
    string sendMsgId = 3;
}

// 给这台机器的房间内所有用户发送消息
message SendMsgAllReq {
    string seq = 1; // 序列号
    uint64 roomId = 2; // roomId/房间ID
    uint64 userId = 3; // 不发送的用户ID
    string cmd = 4; // cmd 动作: msg/enter/exit
    string type = 5; // type 消息类型，默认是 text
    string msg = 6; // msg
}

message SendMsgAllRsp {
    uint64 retCode = 1;
    string errMsg = 2;
    string sendMsgId = 3;
}

// 获取用户列表
message GetUserListReq {
    uint64 roomId = 1;
}

message GetUserListRsp {
    uint64 retCode = 1;
    string errMsg = 2;
    repeated uint64 userId = 3;
}
